# confengine-to-youtube

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  swagger.yaml
.github/workflows/: ci.yml
confengine_exporter/: cli.py
confengine_exporter/adapters/: confengine_api.py  confengine_schema.py  file_writer.py  markdown_builder.py
confengine_exporter/domain/: session.py
confengine_exporter/infrastructure/: http_client.py
confengine_exporter/usecases/: export_sessions.py
scripts/: run_mutmut.py
src/confengine_exporter/: __init__.py
src/confengine_exporter/adapters/: confengine_api.py  confengine_schema.py  constants.py  mapping_file_reader.py  mapping_file_writer.py  mapping_schema.py  youtube_api.py  youtube_description_builder.py  youtube_title_builder.py
src/confengine_exporter/domain/: session.py  video_mapping.py
src/confengine_exporter/infrastructure/: http_client.py  youtube_auth.py
src/confengine_exporter/infrastructure/cli/: __init__.py  constants.py  diff_formatter.py  generate_mapping.py  youtube.py
src/confengine_exporter/usecases/: dto.py  generate_mapping.py  protocols.py  update_youtube_descriptions.py
src/confengine_to_youtube/: __init__.py  import_contracts.py
src/confengine_to_youtube/adapters/: confengine_api.py  confengine_schema.py  constants.py  mapping_file_reader.py  mapping_file_writer.py  mapping_schema.py  markdown_converter.py  protocols.py  youtube_api.py  youtube_description_builder.py  youtube_schema.py  youtube_title_builder.py
src/confengine_to_youtube/domain/: _sentinel.py  abstract_markdown.py  conference_schedule.py  constants.py  errors.py  schedule_slot.py  sealed.py  session.py  session_abstract.py  session_override.py  speaker.py  video_mapping.py  youtube_content_generator.py  youtube_description.py  youtube_title.py
src/confengine_to_youtube/infrastructure/: http_client.py
src/confengine_to_youtube/infrastructure/cli/: __init__.py  constants.py  diff_formatter.py  factories.py  generate_mapping.py  result_aggregator.py  youtube.py
src/confengine_to_youtube/usecases/: deps.py  dto.py  errors.py  generate_mapping.py  protocols.py  sync_playlist.py  update_youtube_descriptions.py
tests/: conftest.py
tests/adapters/: test_confengine_api.py  test_confengine_schema.py  test_file_writer.py  test_mapping_file_reader.py  test_mapping_file_writer.py  test_markdown_builder.py  test_youtube_api.py  test_youtube_description_builder.py  test_youtube_title_builder.py
tests/domain/: test_session.py  test_video_mapping.py
tests/infrastructure/: test_diff_formatter.py  test_youtube_auth.py
tests/integration/: test_import_contracts.py
tests/integration/adapters/: test_confengine_api.py  test_mapping_file_reader.py  test_youtube_api.py
tests/integration/infrastructure/: test_youtube_auth.py
tests/integration/usecases/: conftest.py  test_generate_mapping.py  test_sync_playlist.py  test_update_youtube_descriptions.py
tests/unit/: test_import_contracts.py
tests/unit/adapters/: test_confengine_schema.py  test_mapping_file_writer.py  test_markdown_converter.py  test_youtube_description_builder.py  test_youtube_title_builder.py
tests/unit/domain/: test_conference_schedule.py  test_sealed.py  test_session.py  test_session_override.py  test_speaker.py  test_video_mapping.py  test_youtube_content_generator.py  test_youtube_description.py  test_youtube_title.py
tests/unit/infrastructure/: test_diff_formatter.py
tests/unit/usecases/: test_dto.py
tests/usecases/: test_export_sessions.py  test_generate_mapping.py  test_update_youtube_descriptions.py
